[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuzzy-matcher"
version = "0.1.0"
description = "Country-scoped fuzzy matching between branch-level and HQ-level bank datasets."
requires-python = ">=3.10"
dependencies = [
    "duckdb",
    "pandas",
    "rapidfuzz",
    "click",
    "pyarrow",
    "tqdm",
]

[project.scripts]
fuzzy-match = "fuzzy_matcher.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fuzzy_matcher*"]
